--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ button {
     cursor: pointer;
     width: 150px;
     height: 50px;
-    border: none;
+    border: 2px, white;
     border-radius: 2px;
     margin: 5%;
 }
