--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,45 @@
-.body {
+.intro {
     text-align: center;
 }
-.body h1 {
+.intro h1 {
     font-size: 44px;
     font-weight: 700;
     letter-spacing: 0.5px;
 }
-.body h2 {
+.intro h2 {
     font-size: 26px;
     font-weight: 400;
     letter-spacing: 0.5px;
     opacity: 70%;
 }
-.body img {
-    margin-top: 2%;
+.intro img {
+    margin: 2%;
     border-radius: 125px;
+}
+.about {
+    background-color: #02A7F0;
+    padding-bottom: 2.5%;
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+.aboutTxt {
+    margin: auto;
+    width: 50%;
+    text-align: center;
+}
+.aboutTxt p {
+    font-size: 22px;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    text-align: center;
+    margin-bottom: 5%;
+}
+.aboutTxt button{
+    background-color: #f2f2f2;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 22px;
+    border: 2px solid black;
+    border-radius: 22px;
+    padding: 10px;
 }
