--- a/css/dropMenu.css
+++ b/css/dropMenu.css
@@ -4,12 +4,13 @@
 }
 .dropBtn {
     cursor: pointer;
+    max-height: 40px;
 }
 .dropDownMenu {
     display: none;
     position: absolute;
-    background-color: #02A7F0;
-    min-width: 180px;
+    background-color: #3a0055;
+    min-width: 150px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     right: 0;
@@ -22,7 +23,7 @@
     font-size: 20px;
 }
 .dropDownMenu a:hover {
-    outline: 1px solid black;
+    outline: 1px solid white;
 }
 .dropDown:hover .dropDownMenu {
     display: block;
