--- a/css/index.css
+++ b/css/index.css
@@ -2,22 +2,34 @@
     text-align: center;
 }
 .intro h1 {
-    font-size: 44px;
+    font-size: 48px;
     font-weight: 700;
     letter-spacing: 0.5px;
+    color: white;
+    text-shadow:
+   -2px -2px 0 black,  
+    2px -2px 0 black,
+    -2px 2px 0 black,
+     2px 2px 0 black;
 }
 .intro h2 {
-    font-size: 26px;
+    color: white;
+    font-size: 24px;
     font-weight: 400;
     letter-spacing: 0.5px;
-    opacity: 70%;
+    opacity: 90%;
+    text-shadow:
+   -2px -2px 0 black,  
+    2px -2px 0 black,
+    -2px 2px 0 black,
+     2px 2px 0 black;
 }
 .intro img {
-    margin: 2%;
+    margin-bottom: 2%;
     border-radius: 125px;
 }
 .about {
-    background-color: #02A7F0;
+    background-color: #3a00558e;
     padding-bottom: 2.5%;
     position: absolute;
     left: 0;
@@ -29,23 +41,31 @@
     text-align: center;
 }
 .aboutTxt p {
+    color: white;
     font-size: 22px;
     font-weight: 400;
     letter-spacing: 0.5px;
     text-align: center;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
 }
 .aboutTxt button{
     background-color: #f2f2f2;
     font-family: 'PT Sans', sans-serif;
     font-size: 22px;
-    border: 2px solid black;
+    border: 2px solid #3a0055;
     border-radius: 22px;
     padding: 10px;
+    transition: 1s;
+    cursor: pointer;
+}
+.aboutTxt button:hover {
+    background-color: #3a0055;
+    border: 2px solid #f2f2f2;
+    color: white;
+    transition: 1s;
 }
 .skills {
     display: flex;
     flex-direction: column;
     text-align: center;
-
 }
