--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@
      2px 2px 0 black;
 }
 .intro h2 {
+    margin-bottom: 3%;
     color: white;
     font-size: 24px;
     font-weight: 400;
@@ -25,19 +26,19 @@
      2px 2px 0 black;
 }
 .intro img {
-    margin-bottom: 2%;
+    margin-bottom: 3%;
     border-radius: 125px;
 }
 .about {
     background-color: #3a00558e;
-    padding-bottom: 2.5%;
-    position: absolute;
+    padding-top: 2%;
+    padding-bottom: 2%;
     left: 0;
     right: 0;
 }
 .aboutTxt {
     margin: auto;
-    width: 50%;
+    width: 60%;
     text-align: center;
 }
 .aboutTxt p {
@@ -46,7 +47,7 @@
     font-weight: 400;
     letter-spacing: 0.5px;
     text-align: center;
-    margin-bottom: 3%;
+    margin-bottom: 2%;
 }
 .aboutTxt button{
     background-color: #f2f2f2;
@@ -55,7 +56,7 @@
     border: 2px solid #3a0055;
     border-radius: 22px;
     padding: 10px;
-    transition: 1s;
+    transition: 0.5s;
     cursor: pointer;
 }
 .aboutTxt button:hover {
@@ -65,7 +66,49 @@
     transition: 1s;
 }
 .skills {
+    width: 60%;
+    margin: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
+    color: white;
+}
+.skills h2 {
+    text-shadow:
+   -1px -1px 0 black,  
+    1px -1px 0 black,
+    -1px 1px 0 black,
+     1px 1px 0 black;
+}
+.coding {
+    border: 2px solid #3a0055;
+    border-radius: 2px;
+    background-color: #ffffff79;
     text-align: center;
+    width: 50%;
+}
+
+.design {
+    border: 2px solid #3a0055;
+    border-radius: 2px;
+    background-color: #ffffff79;
+    text-align: center;
+    width: 50%;
+}
+
+footer {
+    background-color: #3a00558e;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    color: white;
+    text-align: center;
+    font-size: 16px;
+}
+a {
+    color: white;
+    text-shadow:
+   -1px -1px 0 black,  
+    1px -1px 0 black,
+    -1px 1px 0 black,
+     1px 1px 0 black;
 }
