--- a/Year 1/OOBP Exercise1/cart.css
+++ b/Year 1/OOBP Exercise1/cart.css
@@ -1,36 +1,26 @@
 html{
     background-color: #fff;
 }
-
 .shopMenu {
     width: 500px;
 }
-
 .container{
     display: flex;
     background-color: #f6f6f6;
 }
-
 .container2{
     display: flex;
     justify-content: space-between;    
 }
-
-
-
 .img1{
-    padding-right: 290px;
-    
+    padding-right: 290px; 
 }
-
 .kaiH4{
     margin-left: 40px;
 }
-
 .shopcart{
     margin-left: 35px;
 }
-
 .button2{
     border: 0px;
     background-color: #f6f6f6;
@@ -40,15 +30,11 @@ html{
     font-weight: bold;
     padding: 20px;
     outline: none;
-    cursor: pointer;
-    
-    
+    cursor: pointer; 
 }
-
 .button2:hover{
     color:#7f7f7f ;
 }
-
 .container3{
     background-color: #ffffff;
     display: flex;
@@ -60,20 +46,12 @@ html{
     position: relative;
     padding: 10px;
     border: 20px solid #ffffff;
-    
-    
 }
-
-.produceimg{
-    border: 1px solid #ccc;
-}
-
 .producediv{
     float: right;
     position: relative;
     left: 6px;
 }
-
 .container4{
     display: flex;
     justify-content: space-between;
@@ -85,19 +63,16 @@ html{
     height: 120px;
     margin-bottom: 15px;
 }
-
 #subcod{
     height: 24px;
     resize: none;
     vertical-align: bottom;
 }
-
 #subcod2{
     height: 15px;
     resize: none;
     vertical-align: bottom;
 }
-
 .rmvbtn {
     border: 0px;
     background-color: #f6f6f6;
@@ -106,7 +81,6 @@ html{
     outline: none;
     cursor: pointer;
 }
-
 .bkbtn{
     background-color: white;
     outline: none;
@@ -118,18 +92,15 @@ html{
     border-radius: 20px;
     cursor: pointer;
 }
-
 .rmvbtn:hover{
     color:#7f7f7f ;
 }
-
 .bkbtn:hover{
     background-color: #f6f6f6;
     outline: none;
     border:none;
     font-size: 20px;
 }
-
 .submit2{
     outline: none;
     height: 30px;
@@ -140,11 +111,9 @@ html{
     background-color: white;
     cursor: pointer;
 }
-
 .submit2:hover{
     background-color: #f6f6f6;
 }
-
 #container3 {
     display: flex;
     height: 140px;
@@ -153,7 +122,6 @@ html{
     margin-top: 30px;
     position: relative;
 }
-  
 #container3 h5 {
     font-family: "Montserrat", sans-serif;
     margin-top: 40px;
@@ -161,21 +129,17 @@ html{
     margin-left: 53px;
     font-size: 13px;
 }
-
-  
 #form {
     margin-top: -10px;
     position: relative;
     bottom: 10px;
     margin-left: 53px; 
 }
-  
 #form input {
     width: 260px;
     font-size: 12px;
     font-family: "Montserrat", sans-serif;
 }
-  
 #form button {
     font-family: "Montserrat", sans-serif;
     background-color: #ffffff;
@@ -186,22 +150,18 @@ html{
     height: 21px;
     cursor: pointer;
 }
-
 #form button:hover {
     outline: none;
     background-color: #f6f6f6
 }
-
 #form button:focus {
     outline: none;
     background-color: #f6f6f6
 }
-
 #form button:focus {
     outline: none;
     background-color: #f6f6f6
 }
-  
 #container4 {
     margin-top: 10px;
     height: 120px;
@@ -209,7 +169,6 @@ html{
     justify-content: space-between;
     margin-left: 95px;
 }
-  
 #container4 button {
     border: 0px;
     background-color: #f6f6f6;
@@ -219,11 +178,9 @@ html{
     font-weight: bold;
     padding: 20px;
 }
-  
 #container4 button:hover{
     color: #7f7f7f;
 }
-
 h5 {
     font-family: "Montserrat", sans-serif;
     font-style: italic;
@@ -232,46 +189,37 @@ h5 {
     font-size: 13px;
     margin-left: 53px;
 }
-
-
 .sum{
     font-weight: bold;
     font-size: 17px;
     color: #7f7f7f
 }
-
 .ordid{
     font-weight: bolder;
     color: #7f7f7f;
     margin-top: 5px
 }
-
 .ordleft{
     color: #333333;
     margin-top: 50px;
     font-weight: 500;
 }
-
 .ordright{
     color: #555555;
     float: right;
     margin-top: 50px;
-
 }
-
 .ordtot{
     color: #333333;
     font-weight: Bold;
     margin-top: 50px;
 }
-
 .ordpric{
     color: #555555;
     float: right;
     margin-top: 50px;
     font-weight: bold;
 }
-
 .checbut{
     float: left;
     margin-top: 70px;
@@ -285,7 +233,6 @@ h5 {
     font-family: "Montserrat", sans-serif;
     cursor: pointer;
 }
-
 .billing{
     float: right;
     font-family: "Montserrat", sans-serif;
@@ -294,7 +241,6 @@ h5 {
     padding: 30px;
     text-align: justify;
 }
-
 .ordercont{
     width: 35%;
     text-align: left;
@@ -304,57 +250,42 @@ h5 {
     flex-direction: column;
     margin-bottom: 50px;
 }
-
 .shiphead{
     color: #555555;
     font-weight: Bolder;
     margin-top: -5px;
     font-size: 15px;
-
 }
-
 .shiptext1{
     color: #333333;
     margin-top: 5px;
     font-size: 13px;
-
 }
-
 .shiptext1st{
     color: #333333;
     margin-top: 20px;
     font-size: 13px;
-
 }
-
 .shiptext2{
     color: #333333;
     margin-top: 5px;
     font-size: 13px;
-
 }
-
 .shiptext2st{
     color: #333333;
     margin-top: 20px;
     font-size: 13px;
-
 }
-
 .shiptext3{
     color: #333333;
     margin-top: 10px;
     font-size: 13px;
-
 }
-
 .shiptext3st{
     color: #333333;
     margin-top: 25px;
     font-size: 13px;
-
 }
-
 .shiptext3right{
     color: #333333;
     margin-top: 0px;
@@ -364,7 +295,6 @@ h5 {
     text-align: right;
     margin-bottom: 5px;
 }
-
 .shiptext3rightnd{
     color: #333333;
     margin-top: 0px;
@@ -378,16 +308,16 @@ h5 {
     display: flex;
     justify-content: space-between;
 }
-
 .amount {
     width: 20%;
     outline: none;
 }
-
 .deleteDiv {
     background-color: #f6f6f6;
     border: none;
     outline: none;
-    padding: 5%;
-    
+    padding: 5%; 
+}
+.productImage {
+    max-width: 120px;
 }
