--- a/css/dropMenu.css
+++ b/css/dropMenu.css
@@ -15,12 +15,16 @@
     z-index: 1;
     right: 0;
 }
+.flag {
+    max-height: 10px;
+}
 .dropDownMenu a {
     color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    font-size: 20px;
+    font-size: 18px;
+    text-align: center;
 }
 .dropDownMenu a:hover {
     outline: 1px solid white;
@@ -30,4 +34,16 @@
 }
 .dropDown:focus-within .dropDownMenu {
     display: block;
+}
+.language {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+}
+.eng {
+    width: 50%;
+}
+.fin {
+    width: 50%;
 }
